fix: word flipper layout shift fixed

--- a/src/sections/HomeStart/Home_Start.module.scss
+++ b/src/sections/HomeStart/Home_Start.module.scss
@@ -21,7 +21,7 @@
 			rgba(142, 246, 215, 0.4)
 		);
 		border-radius: 15px 15px 0px 0px;
-		overflow: clip;
+		overflow: hidden;
 		z-index: 0;
 		color: inherit;
 	}
